# modulegui

./: .gitignore  README.md  main.py  managepython.py  patchnote.md  pyproject.toml
core/: command_runner.py  env_manager.py  module_manager.py
pyvy/: __init__.py  main.py
pyvy/core/: python_manager.py  utils.py
src/modulegui/: __init__.py  __main__.py
